:bug: fixed decorators on porxy
